--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@types/pg": "^8.16.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.33.0",
     "js-yaml": "^4.1.1",
     "lucide-react": "^0.563.0",
+    "mysql2": "^3.16.3",
     "next": "16.1.6",
+    "pg": "^8.18.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0"
